--- a/executeur/index.html
+++ b/executeur/index.html
@@ -1,24 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L'EXEC</title>
+    <title>Boîte à Vers 🇮🇹</title>
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+        body {
+            margin: 30px;
+            background-color: whitesmoke;
+            color: #232323;
+
+            display: flex;
+            align-items: start;
+            justify-content: start;
+
+            font-family: Gill Sans;
+        }
+
+        button {
+            background-color: transparent;
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            padding: 0;
+            border: none;
+            height: 80%;
+            margin: 0;
+            cursor: pointer;
+        }
+
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+
+        div {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            max-width: 800px;
+            width: 80%;
+        }
+
+        small {
+            font-style: normal;
+            padding: 3px 10px;
+            opacity: 1;
+            height: fit-content;
+            background-color: white;
+            color: white;
+            padding: 3px 0px;
+            width: fit-content;
+            border-radius: 4px;
+            overflow: hidden;
+        }
+
+        #vers {
+            font-size: 3rem;
+            margin: 0;
+            margin-bottom: 30px;
+            text-align: left;
+            text-wrap: balance;
+            opacity: .2;
+        }
+
+        #chanson {
+            font-size: 1rem;
+            color: white;
+            background-color: green;
+            height: 100%;
+            padding: 3px 8px;
+        }
+
+        #album {
+            font-size: 1rem;
+            color: white;
+            background-color: red;
+            height: 100%;
+            padding: 3px 8px;
+        }
+
+
+
+        @keyframes kick {
+            0% {
+                transform: translateY(0) scale(1);
+            }
+
+            50% {
+                transform: translateY(-50px) rotate(45deg) scale(1.3);
+            }
+
+            100% {
+                transform: translateY(0) scale(1);
+            }
+        }
+    </style>
 </head>
+
 <body>
-
-    <a href="https://www.youtube.com/results?search_query=l%27executeur+de+hong+kong" target="_blank" id="vaecouter">Pour reunir les plus belles paroles du Travolta des océans...</a>
-
-    <div class="table">
-
-        <a href="https://forms.gle/2w3Ks2LkXYkMSGR67" target="_blank" id="link">AJOUTER!</a>
+    <div>
+        <span id="vers">Et ouais mon pote, un sac rempli des rhymes du travolta des océans!!!</span>
+        <small><span id="chanson"></span> dans <span id="album"></span></small>
     </div>
-    
 
-    <script id="script" src="assets/js/script.js"></script>
-    
+
+    <button>
+        <img src="executeur/bruce.png" alt="">
+    </button>
+
+    <audio id="bruce" src="bruce.mp3" preload="auto"></audio>
+
+    <script id="script" src="data.json"></script>
+
+    <script>
+        let jsonArray = [];
+        // const imageList = ['bruce.png', 'chausettes.png', 'moto.png', 'pizzaiolo.png'];
+
+        // function setRandomButtonImage() {
+        //     const randomImage = imageList[Math.floor(Math.random() * imageList.length)];
+        //     document.querySelector("button img").src = 'executeur/' + randomImage;
+        // }
+
+
+        var foot = document.querySelector("button")
+
+
+
+        async function loadJSON() {
+            try {
+                const response = await fetch('data.json');
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                jsonArray = await response.json();
+            } catch (error) {
+                console.error('Error loading JSON:', error);
+            }
+            console.log(jsonArray);
+        }
+
+        function showRandomEntry() {
+            document.querySelector("small").style.color = 'black';
+            document.querySelector("#vers").style.opacity = '1';
+
+            foot.style.animation = 'kick 0.5s ease';
+            foot.addEventListener('animationend', () => {
+                foot.style.animation = '';
+            }, { once: true });
+
+            bruce.play();
+
+            const randomEntry = jsonArray[Math.floor(Math.random() * jsonArray.length)];
+
+            document.getElementById("vers").innerHTML = '"' + randomEntry.vers + '"';
+            document.getElementById("chanson").innerHTML = randomEntry.chanson;
+            document.getElementById("album").innerHTML = randomEntry.album;
+        }
+
+        foot.addEventListener("click", showRandomEntry);
+
+        document.addEventListener("DOMContentLoaded", () => {
+            // setRandomButtonImage(); 
+            loadJSON();
+        });
+    </script>
+
 </body>
+
 </html>
