--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+
+            /* cursor: alias; */
         }
     </style>
 </head>
@@ -81,7 +83,7 @@
 
         <div style="display: flex; align-items: start; ">
             <small>Age</small>
-            <span><span id="yearsAge"></span> yeas,
+            <span><span id="yearsAge"></span> years,
                 <span id="monthsAge"></span> months,
                 <span id="daysAge"></span> days,
                 <span id="hoursAge"></span> hours,
@@ -89,7 +91,8 @@
         </div>
         <div style="display: flex; align-items: start;">
             <small>Contact</small>
-            <span><a href="" style="color: inherit; text-decoration: none;"><span
+            <span><a href="https://www.instagram.com/sagesseastrale23/"
+                   style="color: inherit; text-decoration: none;"><span
                           style="font-size: 80%;">@</span>sagesseastrale23</a><br>
                 pablo {at} pm {.} me</span>
         </div>
@@ -135,7 +138,7 @@
             if (
                 hr == 23 ||
                 hr == 0 ||
-                hr == 10 ||
+                hr == 1 ||
                 hr == 2 ||
                 hr == 3 ||
                 hr == 4 ||
@@ -184,7 +187,7 @@
             document.getElementById('hoursAge').textContent = elapsed.hours;
             document.getElementById('minutesAge').textContent = elapsed.minutes;
 
-            console.log(elapsed.seconds)
+            // console.log(elapsed.seconds)
         }
 
 
