--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <span><span id="yearsAge"></span> years,
                 <span id="monthsAge"></span> months,
                 <span id="daysAge"></span> days,
-                <span id="hoursAge"></span> hours,
+                <span id="hoursAge"></span> hours and
                 <span id="minutesAge"></span> minutes</span>
         </div>
         <div style="display: flex; align-items: start;">
