--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- Primary Meta Tags -->
-    <title>Pablo ⚡️ Inc.</title>
+    <title>H</title>
     <meta name="title" content="Copa Alzár">
     <meta name="description"
           content="Pablo Moreno">
@@ -32,135 +32,28 @@
 
 <body>
 
-    <!-- <div class="stats">
-        <div class="stats-url">www.pablo.energy/stats</div>
-        <div class="stats-date">october 2029</div>
-    </div> -->
-
-    <div class="screen">
-        <iframe src="" frameborder="0"></iframe>
-
-        <video playsinline autoplay muted loop poster="media/soleil-poster.jpg">
-            <source type="video/webm" src="media/soleil.webm" />
-            <source type="video/mp4" src="media/soleil.mp4" />
-        </video>
+    <div class="text">
+        <span>Pablo Mo</span>
+        <span><span id="yearsAge"></span> years,
+            <span id="monthsAge"></span> months and
+            <span id="daysAge"></span> days</span>
+        <a href="https://www.instagram.com/sagesseastrale23/"><span
+                  style="font-size: 80%;">@</span>sagesseastrale23</a>
     </div>
 
-    <div class="list">
 
-        <select class="websites hover">
-            <option value="" disabled selected id="wip" style="font-style: italic;">Choose one</option>
-            <optgroup label="2024">
-                <option data-url="cent-balles-pour-julie/">Cent balles pour Julie</option>
-                <option data-url="pablo-in-ams/">Pablo in AMS</option>
-                <option data-url="divider/">Divider</option>
-                <option data-url="https://face-tool.netlify.app/">Face Tool</option>
-                <option data-url="https://esadikoi.netlify.app/">Esadikoi</option>
-                <option data-url="portfolio/">Portfolio</option>
-                <option data-url="ventedete/">Vente d'été</option>
-                <option class="nodispo">Moreno Photos Family</option>
-                <option data-url="soutenance/">Soutenance</option>
-                <option data-url="https://blingmaker.netlify.app/">Angèle Blingmaker</option>
-                <option data-url="dansmapeau/">Dans ma peau</option>
-                <option data-url="https://club-mix-esad.netlify.app/">Club Mix ESAD</option>
-                <option data-url="https://a-map-of-inter.net/">A Map of Internet</option>
-                <option class="nodispo">Para Mateo</option>
-                <option data-url="https://copa-alzar.com/">Copa Alzar</option>
-                <option data-url="https://thewebwewant.online/">The Web We Want</option>
-                <option data-url="mirror/">Mirror</option>
-                <option data-url="executeur/">L'Executeur</option>
-                <option data-url="mixito/">Mixito</option>
-                <option data-url="https://web-pad.netlify.app/">Web Pad</option>
-            </optgroup>
-
-            <optgroup label="2023">
-                <option data-url="https://concluded-openspaces.netlify.app/">Concluded Openspaces</option>
-                <option data-url="https://collaborative-narratives.online/">Collaborative Narratives</option>
-                <option data-url="briançon/">Briançon</option>
-                <option data-url="map-extrapractice/">Map XP</option>
-                <option data-url="library-extrapractice/">Library XP</option>
-                <option data-url="fils-rouges">Fils Rouges</option>
-                <option data-url="presence/">Presence</option>
-                <option data-url="bg/">BG</option>
-                <option data-url="threewords4eu/">Three Words 4 Europe</option>
-                <option data-url="twenty-six-hour-a-day/">Twenty six hour a day</option>
-                <option data-url="virtualisations/">Virtualisations</option>
-                <option data-url="https://calendarie2023.netlify.app/">Calendarie 2023</option>
-                <option data-url="playlist/">Playlist</option>
-                <option data-url="digital-stuff/">Digital Stuff</option>
-                <option data-url="lyrics/">Lyrics</option>
-                <option data-url="lune/">Lune</option>
-                <option data-url="pad/">Pad</option>
-            </optgroup>
-
-            <optgroup label="2022">
-                <option data-url="wazzzup-world/">Wazzzup World</option>
-                <option data-url="sunday-sites/">Sunday Sites</option>
-                <option data-url="web-archive/">Web Archive</option>
-            </optgroup>
-
-            <optgroup label="2021">
-                <option data-url="voeux2021/">Voeux 2021</option>
-                <option data-url="sunsets/">Sunsets</option>
-                <option data-url="captcha/">Captcha</option>
-                <option data-url="tott/">Tott</option>
-            </optgroup>
-
-            <optgroup label="2020">
-                <option data-url="poeme-mer/">Poème Mer</option>
-            </optgroup>
-        </select>
-        <button class="hover" id="random">🔀</button>
-        <button class="hover" id="close">❎</button>
-    </div>
-
-    <div class="infosTop">
-
-        <div>
-            <small>Name</small>
-            <span>Pablo M</span>
-        </div>
-
-        <div>
-            <small>Living in</small>
-            <span>Amsterdam</span>
-        </div>
-
-        <div>
-            <small>Time</small>
-            <span>
-                <span id="hours">00</span><span class="flashing">:</span><span id="minutes">00</span><span
-                      class="flashing">:</span><span id="seconds">00</span>
-            </span>
-        </div>
-
-    </div>
-
-    <div class="infosBottom">
-
-        <div>
-            <small>Age</small>
-            <span><span id="yearsAge"></span> years,
-                <span id="monthsAge"></span> months and
-                <span id="daysAge"></span> days</span>
-        </div>
+    <!-- <iframe src="https://www.google.com/maps/embed?pb=!4v1737817533402!6m8!1m7!1sgTVz2lbnEG9LtIwMaGvtiw!2m2!1d52.35381824193865!2d4.897527218349652!3f160.80213185309913!4f1.837155117997412!5f0.7820865974627469"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
 
+    <div id="street-view"></div>
 
-        <div>
-            <small>Contact</small>
-            <span>
-                <!-- <a href="https://www.instagram.com/sagesseastrale23/"
-                   style="color: inherit; text-decoration: none;"><span
-                          style="font-size: 80%;">@</span>sagesseastrale23</a> -->
-                pablo {at} pm {.} me</span>
-        </div>
-
-
-    </div>
+    <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnCsqqTyBfKn8bmxsC-Q7sJ47VzMfuH7I&callback=initialize&v=weekly"
+            defer></script>
 
     <script src="assets/js/index.js"></script>
-
 </body>
 
 </html>
