--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <!-- Primary Meta Tags -->
     <title>H</title>
-    <meta name="title" content="Copa Alzár">
+    <meta name="title" content="Pablo Moreno Inc.">
     <meta name="description"
-          content="Pablo Moreno">
+          content="Hoi, this is my wesbite, sending energy to Internet">
     <meta name="author" content="Pablo Moreno">
     <meta name="keywords" content="Pablo Moreno, webdesign, code, energy, fullspeed">
     <link rel="canonical" href="https://pablo.energy">
