--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -123,6 +123,16 @@
 
 
     <script>
+        function mobileWindow() {
+            let vh = window.innerHeight * 0.01;
+            document.documentElement.style.setProperty('--vh', `${vh}px`);
+        }
+
+        window.addEventListener("resize", mobileWindow, false);
+        window.addEventListener("orientationchange", mobileWindow, false);
+
+
+
 
         const cards = document.querySelectorAll('.card')
         for (let i = 0, max = cards.length; i < max; i++) {
