--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -178,8 +178,7 @@
         window.addEventListener("resize", mobileWindow, false);
         window.addEventListener("orientationchange", mobileWindow, false);
 
-
-
+        mobileWindow()
 
         const cards = document.querySelectorAll('.card')
         for (let i = 0, max = cards.length; i < max; i++) {
