--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pablo+house=puzzle</title>
+    <title>pablo + puzzle = house</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -190,6 +190,7 @@
 
         document.querySelector(".info").addEventListener("click", function () {
             document.querySelector(".box").classList.toggle('boxOpen');
+            document.querySelector(".forzudo").classList.toggle('forzudoOpen');
         });
 
     </script>
