--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pablo + puzzle = house</title>
+    <title>puzzle = house</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -78,7 +78,7 @@
                 <img src="media/1.png" alt="">
             </div>
             <div class="card-face back">
-                super
+                I
             </div>
         </div>
         <div class="card pointer">
@@ -86,6 +86,7 @@
                 <img src="media/2.png" alt="">
             </div>
             <div class="card-face back">
+                still
             </div>
         </div>
         <div class="card pointer">
@@ -93,6 +94,7 @@
                 <img src="media/3.png" alt="">
             </div>
             <div class="card-face back">
+                have
             </div>
         </div>
         <div class="card pointer">
@@ -100,6 +102,7 @@
                 <img src="media/4.png" alt="">
             </div>
             <div class="card-face back">
+                to
             </div>
         </div>
         <div class="card pointer">
@@ -107,6 +110,7 @@
                 <img src="media/5.png" alt="">
             </div>
             <div class="card-face back">
+                fill
             </div>
         </div>
         <div class="card pointer">
@@ -114,6 +118,7 @@
                 <img src="media/6.png" alt="">
             </div>
             <div class="card-face back">
+                these
             </div>
         </div>
         <div class="card pointer">
@@ -121,6 +126,7 @@
                 <img src="media/7.png" alt="">
             </div>
             <div class="card-face back">
+                blocks
             </div>
         </div>
         <div class="card pointer">
@@ -128,6 +134,7 @@
                 <img src="media/8.png" alt="">
             </div>
             <div class="card-face back">
+                with
             </div>
         </div>
         <div class="card pointer">
@@ -135,6 +142,7 @@
                 <img src="media/9.png" alt="">
             </div>
             <div class="card-face back">
+                my
             </div>
         </div>
         <div class="card pointer">
@@ -142,14 +150,15 @@
                 <img src="media/10.png" alt="">
             </div>
             <div class="card-face back">
+                nice
             </div>
         </div>
         <div class="card pointer">
             <div class="card-face front">
-
                 <img src="media/11.png" alt="">
             </div>
             <div class="card-face back">
+                features
             </div>
         </div>
         <div class="card pointer">
@@ -158,13 +167,18 @@
                 <img src="media/12.png" alt="">
             </div>
             <div class="card-face back">
+                !!!
             </div>
         </div>
 
     </div>
 
     <div class="box">
-        <p> OKokodkowdfoweof</p>
+        <p>Here we are. I'm looking for my next room in Amsterdam. It can be in Noord, Oost, Zuid or West, because I
+            like to move and discover new areas. Play around to discover bmore about me but above all don't hesitate to
+            reach me to drink a coffee or chat!<br><a href="https://www.instagram.com/sagesseastrale23/">Instagram</a> |
+            <a href="https://wa.me/34679797573?text=I'm%20interested%20in%20meeting%20u%20Pablo!">Whatsapp</a>
+        </p>
 
     </div>
 
