--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>puzzle = house</title>
+    <title>pablo ❤︎</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -61,12 +61,14 @@
 
 <body>
 
-    <div class="card info">
-        <div class="card-face front">
-            i
-        </div>
-        <div class="card-face back">
-            x
+    <div class="nav">
+        <div class="card info">
+            <div class="card-face front">
+                Info
+            </div>
+            <div class="card-face back">
+                Close
+            </div>
         </div>
     </div>
 
@@ -75,111 +77,141 @@
     <div class="forzudo">
         <div class="card pointer">
             <div class="card-face front">
-                <img src="media/1.png" alt="">
+                <img src="media/01.png" alt="">
             </div>
-            <div class="card-face back">
-                I
-            </div>
-        </div>
-        <div class="card pointer">
-            <div class="card-face front">
-                <img src="media/2.png" alt="">
-            </div>
-            <div class="card-face back">
-                still
+            <div class="card-face back" data-value="friends">
+                <div class="card-content">
+                    <span class="emoji">making new friends (and websites)</span>
+                    <div class="desc hidden">
+                        <img src="media/mur01.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card pointer">
             <div class="card-face front">
-                <img src="media/3.png" alt="">
+                <img src="media/02.png" alt="">
             </div>
-            <div class="card-face back">
-                have
-            </div>
-        </div>
-        <div class="card pointer">
-            <div class="card-face front">
-                <img src="media/4.png" alt="">
-            </div>
-            <div class="card-face back">
-                to
+            <div class="card-face back" data-value="radio">
+                <div class="card-content">
+                    <span class="emoji">radio.garden</span>
+                    <div class="desc hidden">
+                        <img src="media/mur02.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card pointer">
             <div class="card-face front">
-                <img src="media/5.png" alt="">
+                <img src="media/03.png" alt="">
             </div>
-            <div class="card-face back">
-                fill
-            </div>
-        </div>
-        <div class="card pointer">
-            <div class="card-face front">
-                <img src="media/6.png" alt="">
-            </div>
-            <div class="card-face back">
-                these
+            <div class="card-face back" data-value="energy">
+                <div class="card-content">
+                    <span class="emoji">every new day</span>
+                    <div class="desc hidden">
+                        <img src="media/mur03.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card pointer">
             <div class="card-face front">
-                <img src="media/7.png" alt="">
+                <img src="media/04.png" alt="">
             </div>
-            <div class="card-face back">
-                blocks
-            </div>
-        </div>
-        <div class="card pointer">
-            <div class="card-face front">
-                <img src="media/8.png" alt="">
-            </div>
-            <div class="card-face back">
-                with
+            <div class="card-face back" data-value="breakfast">
+                <div class="card-content">
+                    <span class="emoji">PB&J</span>
+                    <div class="desc hidden">
+                        <img src="media/mur04.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card pointer">
             <div class="card-face front">
-                <img src="media/9.png" alt="">
+                <img src="media/05.png" alt="">
             </div>
-            <div class="card-face back">
-                my
-            </div>
-        </div>
-        <div class="card pointer">
-            <div class="card-face front">
-                <img src="media/10.png" alt="">
-            </div>
-            <div class="card-face back">
-                nice
+            <div class="card-face back" data-value="energy">
+                <div class="card-content">
+                    <span class="emoji">every new day</span>
+                    <div class="desc hidden">
+                        <img src="media/mur05.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card pointer">
             <div class="card-face front">
-                <img src="media/11.png" alt="">
+                <img src="media/06.png" alt="">
             </div>
-            <div class="card-face back">
-                features
+            <div class="card-face back" data-value="friends">
+                <div class="card-content">
+                    <span class="emoji">making new friends (and websites)</span>
+                    <div class="desc hidden">
+                        <img src="media/mur06.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card pointer">
             <div class="card-face front">
-
-                <img src="media/12.png" alt="">
+                <img src="media/07.png" alt="">
             </div>
-            <div class="card-face back">
-                !!!
+            <div class="card-face back" data-value="radio">
+                <div class="card-content">
+                    <span class="emoji">radio.garden</span>
+                    <div class="desc hidden">
+                        <img src="media/mur07.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
 
+        <div class="card pointer">
+            <div class="card-face front">
+                <img src="media/08.png" alt="">
+            </div>
+            <div class="card-face back mur8" data-value="none">
+                <div class="card-content">
+                    <i>thanks 4 all</i>
+                    <img src="media/mur08.png" alt="">
+
+                </div>
+            </div>
+        </div>
+        <div class="card pointer">
+            <div class="card-face front">
+                <img src="media/09.png" alt="">
+            </div>
+            <div class="card-face back" data-value="breakfast">
+                <div class="card-content">
+                    <span class="emoji">PB&J</span>
+                    <div class="desc hidden">
+                        <img src="media/mur09.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="box">
-        <p>Here we are. I'm looking for my next room in Amsterdam. It can be in Noord, Oost, Zuid or West, because I
-            like to move and discover new areas. Play around to discover bmore about me but above all don't hesitate to
-            reach me to drink a coffee or chat!<br><a href="https://www.instagram.com/sagesseastrale23/">Instagram</a> |
-            <a href="https://wa.me/34679797573?text=I'm%20interested%20in%20meeting%20u%20Pablo!">Whatsapp</a>
-        </p>
 
+    <div class="box">
+        <div class="paper">
+            <header>
+                <span>🏠👯💌</span>
+                <div>
+                    <a href="https://www.instagram.com/sagesseastrale23/">instagram</a> |
+                    <a href="https://wa.me/34679797573?text=I'm%20interested%20in%20meeting%20u%20Pablo!">whatsapp</a>
+                </div>
+            </header>
+            <p>Here we are again. I'm looking for my next room in Amsterdam. It can be in Noord, Oost, Zuid or West,
+                just
+                need to move in +/- April 25. Play around to discover more about me, but also reach me if you or some
+                friend can help me for this!!
+            <p>Yours 🫂🎐,</p>
+            <p>pablo</p>
+            </p>
+        </div>
     </div>
 
 
@@ -194,20 +226,142 @@
 
         mobileWindow()
 
-        const cards = document.querySelectorAll('.card')
-        for (let i = 0, max = cards.length; i < max; i++) {
-            cards[i].addEventListener("click", function () {
-                // balles[i].classList.add("fullball");
-                this.classList.toggle('flipCard');
-            })
+        // const cards = document.querySelectorAll('.card')
+        // for (let i = 0, max = cards.length; i < max; i++) {
+        //     cards[i].addEventListener("click", function () {
+        //         // balles[i].classList.add("fullball");
+        //         this.classList.toggle('flipCard');
+        //     })
+        // }
+
+
+        // SET CARDS ICONS
+        let flippedCards = [];
+        let lockBoard = false;
+
+        function flipCard(card) {
+            if (lockBoard) return;
+
+            // If the card is already flipped, unflip it and reset
+            if (flippedCards.includes(card)) {
+                card.classList.remove('flipCard');
+                flippedCards = [];
+                lockBoard = false;
+                return;
+            }
+
+            card.classList.add('flipCard');
+            flippedCards.push(card);
+
+            if (flippedCards.length === 2) {
+                lockBoard = true;
+                checkForMatch();
+            }
         }
 
+        function checkForMatch() {
+            const [card1, card2] = flippedCards;
+            const value1 = card1.querySelector('.back').getAttribute('data-value');
+            const value2 = card2.querySelector('.back').getAttribute('data-value');
+
+            if (value1 === value2) {
+                matchFound(card1, card2, value1);
+            } else {
+                noMatch(card1, card2);
+            }
+        }
+
+        function matchFound(card1, card2, value) {
+
+            setTimeout(() => {
+                const container1 = card1.querySelector('.back');
+                const container2 = card2.querySelector('.back');
+
+                container1.classList.add('okCarta');
+                container2.classList.add('okCarta');
+                setTimeout(() => {
+                    container1.classList.remove('okCarta');
+                    container2.classList.remove('okCarta');
+                }, 200);
+
+            }, 600);
+
+            setTimeout(() => {
+                const container1 = card1.querySelector('.card-content');
+                const emoji1 = container1.querySelector('.emoji');
+                const text1 = container1.querySelector('.desc');
+
+                // Update the second card's emoji and text
+                const container2 = card2.querySelector('.card-content');
+                const emoji2 = container2.querySelector('.emoji');
+                const text2 = container2.querySelector('.desc');
+
+                // Hide emoji and show text
+                emoji1.classList.add('hidden')
+                text1.classList.remove('hidden')
+
+                emoji2.classList.add('hidden')
+                text2.classList.remove('hidden')
+
+                // Optionally, you can disable the cards so they can't be clicked anymore
+                card1.removeEventListener('click', handleCardClick);
+                card2.removeEventListener('click', handleCardClick);
+            }, 1000);
+
+
+
+            resetBoard();
+
+        }
+
+
+        function noMatch(card1, card2) {
+            setTimeout(() => {
+                const container1 = card1.querySelector('.back');
+                const container2 = card2.querySelector('.back');
+
+                container1.classList.add('fondoCarta');
+                container2.classList.add('fondoCarta');
+                setTimeout(() => {
+                    container1.classList.remove('fondoCarta');
+                    container2.classList.remove('fondoCarta');
+                }, 200);
+
+            }, 600);
+
+            setTimeout(() => {
+                card1.classList.remove('flipCard');
+                card2.classList.remove('flipCard');
+                resetBoard();
+            }, 1000);
+        }
+
+        function resetBoard() {
+            flippedCards = [];
+            lockBoard = false;
+        }
+
+        function handleCardClick(event) {
+            const card = event.currentTarget;
+            flipCard(card);
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const cards = document.querySelectorAll('.forzudo .card');
+            cards.forEach(card => card.addEventListener('click', handleCardClick));
+        });
+
+
+        // INFO STUFF
         document.querySelector(".info").addEventListener("click", function () {
+            document.querySelector(".info").classList.toggle('flipCard');
+            document.querySelector(".nav").classList.toggle('navOpen');
             document.querySelector(".box").classList.toggle('boxOpen');
             document.querySelector(".forzudo").classList.toggle('forzudoOpen');
         });
 
     </script>
+
 
 </body>
 
